public/login.css
html {
    height: 100%;
  }
  
  body {
    height: 100%;
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    display: grid;
    justify-items: center;
    align-items: center;
    background-color: #a200ff;
  }
  
  #main-holder {
    width: 50%;
    height: 70%;
    display: grid;
    justify-items: center;
    align-items: center;
    background-color: white;
    border-radius: 7px;
    box-shadow: 0px 0px 5px 2px rgb(62, 0, 90);
  }

  #login-header {
    text-align: center;
    justify-items: center;
    align-items: center;
    background-color: #a200ff;
    color: white;
    border-radius: 5px;
    padding: 3px;
    margin-bottom: 0px;
  }
  
  #login-error-msg-holder {
    width: 100%;
    height: 100%;
    display: grid;
    justify-items: center;
    align-items: center;
  }
  
  #login-error-msg {
    width: 23%;
    text-align: center;
    margin: 0;
    padding: 2px;
    font-size: 12px;
    font-weight: bold;
    color: #a200ff;
    border: 1px solid #a200ff;
    background-color: #a200ff;
    opacity: 0;
  }
  
  #error-msg-second-line {
    display: block;
  }
  
  #login-form {
    align-self: flex-start;
    display: grid;
    justify-items: center;
    align-items: center;
  }
  
  .login-form-field::placeholder {
    color: #3a3a3a;
  }
  
  .login-form-field {
    border: none;
    width: 150%;
    border-bottom: 1px solid #a200ff;
    margin-bottom: 10px;
    border-radius: 3px;
    outline: none;
    padding: 0px 0px 5px 5px;
  }
  
  #login-form-submit {
    width: 100%;
    padding: 7px;
    border: none;
    border-radius: 5px;
    color: rgb(255, 255, 255);
    font-weight: bold;
    background-color: #a200ff;
    cursor: pointer;
    outline: none;
    box-shadow: 0px 0px 5px 2px rgb(255, 255, 255);
  }

  .divFormat{
    width: 55%;
    height: 45%;
    justify-items: center;
    align-items: center;
    float: left;
    /*margin-top: -100px;*/
  }

